--- a/la.html
+++ b/la.html
@@ -7,8 +7,6 @@
 </head>
 <body>
   <h1>Olá mundo</h1>
-  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-    Fuga odit dolores saepe tempora debitis? Quam vitae tempore assumenda voluptate eum, 
-    rem quos ea mollitia sunt, nihil at a, vero voluptatem?</p>
+  <p>Lorem, ipsum dolor</p>
 </body>
 </html>
